fixed web config

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,8 +22,7 @@
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>
-                io.swagger.jaxrs.listing,
-                se.munhunger
+                io.swagger.jaxrs.listing
             </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
@@ -45,12 +44,6 @@
             <param-name>swagger.api.basepath</param-name>
             <param-value>/api</param-value>
         </init-param>
-        <load-on-startup>2</load-on-startup>
-    </servlet>
-
-    <servlet>
-        <servlet-name>SwaggerBootstrap</servlet-name>
-        <servlet-class>se.munhunger.wunderbaren.util.swagger.Bootstrap</servlet-class>
         <load-on-startup>2</load-on-startup>
     </servlet>
 
