--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,4 +2,7 @@ version: '2'
 services:
     portfolio:
       image: munhunger/portfolio
+      container_name: "portfolio"
       build: ./
+      ports:
+        - "8082:8080"
