--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,31 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'com.mscharhag.oleaster', name: 'oleaster-matcher', version: '0.1.2'
+    testCompile group: 'com.mscharhag.oleaster', name: 'oleaster-runner', version: '0.1.2'
+    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.6'
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.6'
+    testCompile group: 'org.powermock', name: 'powermock-module-junit4-rule', version: '1.6.6'
+
+    compile('io.swagger:swagger-jaxrs:1.5.16') {
+        exclude group: 'javax.ws.rs'
+    }
+
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0-b05'
+
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.25.1'
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.25.1'
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '2.25.1'
+    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.25.1'
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.25.1'
+
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.10.Final'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
 }
 
 war {
